@@ -24,7 +24,7 @@
         "nette/utils": "^2.4",
         "latte/latte": "^2.4",
         "nexendrie/translation": "^1.1.1",
-        "nexendrie/utils": "^1.4"
+        "nexendrie/utils": "^1.5.1"
     },
     "require-dev": {
         "nexendrie/code-quality": "dev-master",
