@@ -5,6 +5,5 @@ parameters:
     ignoreErrors:
         - '#Access to an undefined property Nette\\Localization\\ITranslator::\$lang#'
         - '#Parameter \#1 \$function of function call_user_func expects callable, array\(\$this\(Nexendrie\\BookComponent\\BookControl\), string\) given#'
-        - '#Method Nexendrie\\BookComponent\\BookPagesStorage::getIndex\(\) should return int\|null but returns int\|string|false#'
     universalObjectCratesClasses:
         - Nette\Bridges\ApplicationLatte\Template
