@@ -42,12 +42,6 @@ final class BookPagesStorageTest extends \Tester\TestCase {
     Assert::true($this->storage->hasPage("slug2"));
     Assert::false($this->storage->hasPage("slug3"));
   }
-  
-  public function testGetIndex() {
-    Assert::same(0, $this->storage->getIndex("slug1"));
-    Assert::same(1, $this->storage->getIndex("slug2"));
-    Assert::same(null, $this->storage->getIndex("slug3"));
-  }
 }
 
 $test = new BookPagesStorageTest();
