@@ -1,6 +1,7 @@
 Version 2.0.0-dev
 - raised minimal version of PHP to 7.2
 - marked BookPagesStorage as final
+- BC break: changed parameters of method BookPagesStorage::getIndex
 
 Version 1.4.0
 - allowed customization of index and page templates
